--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formspree/react": "^3.0.0",
+    "@vercel/edge-config": "^1.4.0",
     "@vercel/kv": "^3.0.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
