--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/edge-config": "^1.4.0",
     "@vercel/kv": "^3.0.0",
     "framer-motion": "^12.23.12",
+    "next": "^15.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0"
