--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,11 @@
       "source": "/parkiety-avi",
       "destination": "https://parkiety-avi-floorin-hzfw.bolt.host/",
       "permanent": false
+    },
+      {
+      "source": "/tynki-u-slawka",
+      "destination": "https://new-chat-x2fr.bolt.host/",
+      "permanent": false
     }
   ]
 }
