--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,11 @@
       "source": "/tynki-u-slawka",
       "destination": "https://new-chat-x2fr.bolt.host/",
       "permanent": false
+    },
+     {
+      "source": "/apartamenty-arena",
+      "destination": "https://new-chat-petu.bolt.host/",
+      "permanent": false
     }
   ]
 }
