--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@vercel/edge-config": "^1.4.0",
     "@vercel/kv": "^3.0.0",
     "framer-motion": "^12.23.12",
-    "next": "^15.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router": "^7.9.3",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
