--- a/vercel.json
+++ b/vercel.json
@@ -44,6 +44,12 @@
       "source": "/domek-wyspa-sobieszewska",
       "destination": "https://domek-na-wyspie-sobi-sw2m.bolt.host/",
       "permanent": false
+    },
+
+     {
+      "source": "/awix-parkiety",
+      "destination": "https://awix-parkiety-zbae.bolt.host/",
+      "permanent": false
     }
   ],
   "rewrites": [
