--- a/vercel.json
+++ b/vercel.json
@@ -66,6 +66,11 @@
       "source": "/chata-na-wczoraj",
       "destination": "https://chata-na-wczoraj-jxaw.bolt.host",
       "permanent": false
+    },
+       {
+      "source": "/kris-remontuje",
+      "destination": "https://kris-remontuje-glxl.bolt.host/",
+      "permanent": false
     }
   ],
   "rewrites": [
