--- a/vercel.json
+++ b/vercel.json
@@ -106,6 +106,11 @@
       "source": "/podlogi-u-pawla",
       "destination": "https://pod-ogi-u-paw-a-dalb.bolt.host/",
       "permanent": false
+    },
+      {
+      "source": "/magspace",
+      "destination": "https://magspace-luksusowy-a-cdjs.bolt.host/",
+      "permanent": false
     }
    
   ],
