--- a/vercel.json
+++ b/vercel.json
@@ -111,6 +111,11 @@
       "source": "/magspace",
       "destination": "https://magspace-luksusowy-a-cdjs.bolt.host/",
       "permanent": false
+    },
+    {
+      "source": "/domek-nad-czarna-hancza",
+      "destination": "https://domek-nad-czarn-ha-c-2pd3.bolt.host/",
+      "permanent": false
     }
    
   ],
