--- a/vercel.json
+++ b/vercel.json
@@ -189,7 +189,12 @@
     },
       {
       "source": "/gliczarowa-osada",
-      "destination": "https://gliczarowa-osada-exas.bolt.host/",
+      "destination": "https://gliczarowa-osada-exas.bolt.host",
+      "permanent": false
+    },
+      {
+      "source": "/delux-apartamenty",
+      "destination": "https://delux-apartmenty-04jh.bolt.host",
       "permanent": false
     }
    
